<resources>
    <string name="app_name">GG</string>
    <string name="friend">朋友</string>
    <string name="chat">聊天</string>
    <string name="say">貼文串</string>
    <string name="today">TODAY</string>
    <string name="money">錢包</string>
    <string name="delete">刪除</string>
    <string name="wtf">按的下送現金</string>
    <string name="frag1title">好友</string>
    <string name="frag2title">聊天</string>
    <string name="frag3title">貼文串</string>
    <string name="frag4title">TODAY</string>
    <string name="frag5title">錢包</string>
    <string name="on">停用自動記錄功能</string>
    <string name="off">啟用自動記錄功能</string>
    <string name="l">|</string>
    <string name="deleteall">全部刪除</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
